fixing spacing issue in data types table

--- a/website/style.css
+++ b/website/style.css
@@ -115,3 +115,6 @@ img {
 #schemaItems ul li {
   margin: 5px 0; line-height: 1.3;
 }
+#schemaItems td:first-child {
+  width: 180px;
+}
